--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@ body {
   bottom: 0;
   margin: auto;
   border: 3px solid;
-  border-color: transparent #822EC8 #822EC8;
+  border-color: transparent #822ec8 #822ec8;
   width: 24px;
   height: 24px;
   border-radius: 50%;
